--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rkp",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://rjkenney11.github.io/rkenney-react-portfolio",
+  "homepage": "https://rkenney-portfolio.herokuapp.com/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
